fixed header spacing for portfolio pdf export

--- a/Modules/Portfolio/templates/default/portfolio_pdf_export.css
+++ b/Modules/Portfolio/templates/default/portfolio_pdf_export.css
@@ -38,3 +38,11 @@ img, .ilc_media_cont_MediaContainer, .mejs-container, .ilProfile{
 	position: absolute;
 	bottom: 20px;
 }
+
+.il_HeaderInner, .media-heading.ilHeader{
+	padding-top: 0px !important;
+}
+
+#mainspacekeeper > .row {
+	margin-top: 0px !important;
+}
